背景圖片完成

--- a/codiv.css
+++ b/codiv.css
@@ -92,7 +92,7 @@ a:hover{
     width:100%;
     
     content:'12343243';
-    background-image:url('image/paper.png');
+    background-image:url('57.png');
     /* background-position-x: center; */
     background-size: contain;
     /* background-size: cover; */
