--- a/codiv.css
+++ b/codiv.css
@@ -73,46 +73,57 @@ a:hover{
     /* border:rgb(0, 16, 245) 1px solid; */
     height:85vh;
     border:red 1px solid;
-    
+    /* background-image:url('857.png');
+    background-size: cover;
+    background-repeat: no-repeat; */
     text-align: center;
+    overflow: visible;
 }
 
 .r_block{
     border:red 1px solid;
-    height:0;
-    padding-bottom:80.85%;
-    width:70%;
-    position:relative;
-    left:0;
+    height:100%;
+    /* padding-bottom:80.85%; */
+    width:100%;
+    /* position:relative; */
+    /* left:0; */
     text-align:center;
+    /* overflow: visible; */
+    background-image:url('857.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+
 }
-.r_block:before{
+/* .r_block:before{
     position:absolute;
     height:100%;
     width:100%;
-    
-    content:'12343243';
-    background-image:url('57.png');
-    /* background-position-x: center; */
-    background-size: contain;
-    /* background-size: cover; */
+    content:'';
+    background-image:url('857.png');
+    background-position-x: center;
+    background-size: cover;
     background-repeat: no-repeat;
+    padding-bottom:20px;
     z-index:-1;
-}
+} */
 .r_text{
-    border:rgb(0, 16, 245) 1px solid;
+    /* border:rgb(0, 16, 245) 1px solid; */
     background-color: none;
     height:100%;
-    width:80%;
+    width:100%;
     /* width:calc(); */
     word-break:normal;
     overflow-x:hidden;
-    padding:10px;
+    padding:15px;
     font-size:0.8em;
-    /* margin-left:50%; */
-    margin-left:2%;
     padding-top:2%;
     padding-bottom:2%;
+
+    /* background-image:url('857.png');
+    background-size: cover;
+    background-repeat: no-repeat; */
     /* transform: translate(-50%,0); */
 }
 
