--- a/codiv.css
+++ b/codiv.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@800&display=swap');
 
 body{
     margin: 0;
@@ -9,14 +10,15 @@ body{
     height:100vh;
     width:100vw;
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 25px;
+    font-size: 18px;
     color:rgb(0, 0, 0);
-    /* overflow: hidden; */
     position: relative;
+    overflow: hidden !important;
 }
 
+
 a{
-    color:white;
+    color:#132163;
     text-decoration: none;
 }
 a:hover{
@@ -24,13 +26,14 @@ a:hover{
     text-decoration: none;
 }
 .container{
-    height:100vh;
     width:100%;
+    height:100vh;
     background: #a35a1650;
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 5.0px );
     -webkit-backdrop-filter: blur( 5.0px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    overflow: hidden !important;
 }
 .title{
     position:absolute;
@@ -41,13 +44,20 @@ a:hover{
     font-weight: 900;
     flex-direction: column;
 }
-.t2{
-    text-align: center !important;
+.nav{
+    position:inherit;
+    font-size:1.2rem;
+    z-index:10;
+    width:25%;
+    font-weight: bolder;
+    display:flex;
+    justify-content: space-around;
+    font-family: 'Shippori Mincho', serif;
 }
+
 
 #login{
     position:absolute;
-    /* bottom:5; */
     top:90vh;
     right:1vw;
     transform: rotate(-25deg);
@@ -56,80 +66,14 @@ a:hover{
 }
 
 .center{
-    margin-top:10vh;
+    height:85%;
 }
 
-.left{
-    margin-top:25vh;
-    flex-direction: column;
-    font-size: 30px;
-    font-weight: 500;
-    align-items: flex-end;
-}
-.left a{
-    margin-top:5%;
-}
-.right{
-    /* border:rgb(0, 16, 245) 1px solid; */
-    height:85vh;
-    border:red 1px solid;
-    /* background-image:url('857.png');
-    background-size: cover;
-    background-repeat: no-repeat; */
-    text-align: center;
-    overflow: visible;
-}
 
-.r_block{
-    border:red 1px solid;
-    height:100%;
-    /* padding-bottom:80.85%; */
-    width:100%;
-    /* position:relative; */
-    /* left:0; */
-    text-align:center;
-    /* overflow: visible; */
-    background-image:url('857.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+.table::-webkit-scrollbar {
+    width: 0px;
+  } 
 
-
-}
-/* .r_block:before{
-    position:absolute;
-    height:100%;
-    width:100%;
-    content:'';
-    background-image:url('857.png');
-    background-position-x: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding-bottom:20px;
-    z-index:-1;
-} */
-.r_text{
-    /* border:rgb(0, 16, 245) 1px solid; */
-    background-color: none;
-    height:100%;
-    width:100%;
-    /* width:calc(); */
-    word-break:normal;
-    overflow-x:hidden;
-    padding:15px;
-    font-size:0.8em;
-    padding-top:2%;
-    padding-bottom:2%;
-
-    /* background-image:url('857.png');
-    background-size: cover;
-    background-repeat: no-repeat; */
-    /* transform: translate(-50%,0); */
-}
-
-.r_text::-webkit-scrollbar{
-    display:none
-}
 
 input,textarea{
     background: #ffffff50;
@@ -280,41 +224,42 @@ cursor: default !important;
     text-align:right;
 }
 
+
 /* 540 sm以下 */
 @media (max-width: 540px) {
-    .left{
-        display:none !important;
-    }
-    .r_text{
-    /* width: 95%; */
-    }
-    #loginblock{
-        width:350px;
-    }
+
 }
 @media (max-width: 720px) and (min-width: 540px) {
-    .left{
-        display:none !important;
-    }
-    .r_text{
-        /* width: 95%; */
-        }
+    
 }
 @media (max-width: 960px) and (min-width:760px) {
-    .r_text{
-        /* width: 95%; */
-        }
-}
+} 
 
-/* 760爆掉 */
 @media (max-width: 1140px) and (min-width:960px) {
-    .r_text{
-        /* width: 75%; */
-        /* width: 95%; */
-        }
+    
 }
 @media (max-width: 1350px) and (min-width:1140px) {
-    .r_text{
-        /* width: 60%; */
-        }
+    
+}
+
+
+/* 額外新增 */
+@media (max-width: 992px) and (min-width:768px) {
+    .nav{
+        width:80%;
+        font-size:1.5rem;
+    }
+}
+@media (min-width:992px) {
+    .nav{
+        position:absolute;
+        top:10%;
+        left:1%;
+        flex-direction: column;
+        font-size:2.2rem;
+    }
+    /*跑不出來*/
+    .nav a:nth-child(2){
+        left:5%;
+    }
 }
